# franz

./: .gitignore  .gitlab-ci.yml  ChangeLog.md  Dockerfile  README.md  benchmark.sh  cabal.project  franz.cabal  liszt.cabal  package.yaml  stack.yaml  test.indices  test.payload
.github/workflows/: haskell.yml
app/: Client.hs  Options.hs  Server.hs  client.hs  server.hs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
src/Database/: Franz.hs  Liszt.hs
src/Database/Franz/: Client.hs  Contents.hs  Internal.hs  Network.hs  Protocol.hs  Reader.hs  Reconnect.hs  Server.hs  URI.hs  Writer.hs
src/Database/Franz/Client/: Reconnect.hs
src/Database/Franz/Internal/: Contents.hs  Fuse.hs  IO.hs  Protocol.hs  Reader.hs  URI.hs
src/Database/Franz/Writer/: Simple.hs
src/Database/Liszt/: Client.hs  Network.hs  Server.hs  Types.hs
tests/: test.hs
