cabal-version:  2.0
version:        0.2.1
name:           franz
description:    Please see the README on GitHub at <https://github.com/fumieval/franz#readme>
homepage:       https://github.com/fumieval/franz#readme
bug-reports:    https://github.com/fumieval/franz/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2019 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
build-type:     Simple
category:       Database
synopsis:       Append-only database
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/fumieval/franz

library
  exposed-modules:
      Database.Franz
      Database.Franz.Internal
      Database.Franz.Reader
      Database.Franz.Server
      Database.Franz.Network
      Database.Franz.Protocol
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , async
    , bytestring
    , cereal
    , containers
    , concurrent-resource-map >=0.2 && <0.3
    , cpu
    , deepseq
    , directory
    , fast-builder ^>= 0.1.2.0
    , filepath
    , fsnotify
    , mtl
    , network
    , process
    , retry
    , sendfile
    , stm
    , transformers
    , unboxed-ref
    , vector
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

executable franz
  main-is: client.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , bytestring
    , franz
    , network
    , stm
    , vector
  default-language: Haskell2010

executable franzd
  main-is: server.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , franz
    , network
    , optparse-applicative
  default-language: Haskell2010
