cabal-version:  2.0
version:        0.5.1
name:           franz
description:    Please see the README on GitHub at <https://github.com/tsurucapital/franz#readme>
homepage:       https://github.com/tsurucapital/franz#readme
bug-reports:    https://github.com/tsurucapital/franz/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2021 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
build-type:     Simple
category:       Database
synopsis:       Append-only database
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tsurucapital/franz

library
  exposed-modules:
      Database.Franz.Client
      Database.Franz.Client.Reconnect
      Database.Franz.Contents
      Database.Franz.Internal.Contents
      Database.Franz.Internal.Fuse
      Database.Franz.Internal.IO
      Database.Franz.Internal.Protocol
      Database.Franz.Internal.Reader
      Database.Franz.Internal.URI
      Database.Franz.Server
      Database.Franz.Writer
      Database.Franz.Writer.Simple
  hs-source-dirs:
      src
  build-depends:
      base >=4.13 && <5
    , bytestring
    , cereal
    , containers
    , concurrent-resource-map ^>=0.2
    , cpu
    , deepseq
    , directory
    , exceptions
    , fast-builder ^>= 0.1.2.0
    , filepath
    , fsnotify
    , hashable
    , mtl
    , network
    , process
    , retry
    , sendfile
    , stm
    , stm-delay
    , text
    , temporary
    , transformers
    , unboxed-ref
    , vector
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

executable franz
  main-is: client.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , bytestring
    , franz
    , network
    , stm
    , vector
    , optparse-applicative
  default-language: Haskell2010
  ghc-options: -threaded -Wall

executable franzd
  main-is: server.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , franz
    , network
    , optparse-applicative
  default-language: Haskell2010

test-suite test
    build-depends: base
        , franz
        , fast-builder
        , temporary
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    default-language: Haskell2010
    main-is: test.hs
    ghc-options: -Wall -Wcompat